--- a/rtdetr_pytorch/configs/dataset/coco_detection.yml
+++ b/rtdetr_pytorch/configs/dataset/coco_detection.yml
@@ -7,8 +7,8 @@ train_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: ./dataset/coco/train2017/
-    ann_file: ./dataset/coco/annotations/instances_train2017.json
+    img_folder: /mnt/h/ml_dataset_home/coco/train2017/
+    ann_file: /mnt/h/ml_dataset_home/coco/annotations/instances_train2017.json
     transforms:
       type: Compose
       ops: ~
@@ -23,8 +23,8 @@ val_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: ./dataset/coco/val2017/
-    ann_file: ./dataset/coco/annotations/instances_val2017.json
+    img_folder: /mnt/h/ml_dataset_home/coco/val2017/
+    ann_file: /mnt/h/ml_dataset_home/coco/annotations/instances_val2017.json
     transforms:
       type: Compose
       ops: ~ 
