--- a/rtdetr_pytorch/configs/rtdetr/include/rtdetr_r50vd.yml
+++ b/rtdetr_pytorch/configs/rtdetr/include/rtdetr_r50vd.yml
@@ -5,28 +5,30 @@ criterion: SetCriterion
 postprocessor: RTDETRPostProcessor
 
 
-RTDETR: 
+RTDETR:
   backbone: PResNet
   encoder: HybridEncoder
   decoder: RTDETRTransformer
-  multi_scale: [480, 512, 544, 576, 608, 640, 640, 640, 672, 704, 736, 768, 800]
+  multi_scale: [ 480, 512, 544, 576, 608, 640, 640, 640, 672, 704, 736, 768, 800 ]
 
+# backbone
 PResNet:
   depth: 50
   variant: d
   freeze_at: 0
-  return_idx: [1, 2, 3]
+  return_idx: [ 1, 2, 3 ]
   num_stages: 4
   freeze_norm: True
-  pretrained: True 
+  pretrained: True
 
+# encoder
 HybridEncoder:
-  in_channels: [512, 1024, 2048]
-  feat_strides: [8, 16, 32]
+  in_channels: [ 512, 1024, 2048 ]
+  feat_strides: [ 8, 16, 32 ]
 
   # intra
   hidden_dim: 256
-  use_encoder_idx: [2]
+  use_encoder_idx: [ 2 ]
   num_encoder_layers: 1
   nhead: 8
   dim_feedforward: 1024
@@ -40,12 +42,12 @@ HybridEncoder:
   act: 'silu'
 
   # eval
-  eval_spatial_size: [640, 640]
+  eval_spatial_size: [ 640, 640 ]
 
-
+# decoder
 RTDETRTransformer:
-  feat_channels: [256, 256, 256]
-  feat_strides: [8, 16, 32]
+  feat_channels: [ 256, 256, 256 ]
+  feat_strides: [ 8, 16, 32 ]
   hidden_dim: 256
   num_levels: 3
 
@@ -56,7 +58,7 @@ RTDETRTransformer:
   num_denoising: 100
   
   eval_idx: -1
-  eval_spatial_size: [640, 640]
+  eval_spatial_size: [ 640, 640 ]
 
 
 use_focal_loss: True
@@ -70,14 +72,14 @@ RTDETRPostProcessor:
 
 SetCriterion:
   # num_classes: 80
-  weight_dict: {loss_vfl: 1, loss_bbox: 5, loss_giou: 2,}
-  losses: ['vfl', 'boxes', ]
+  weight_dict: { loss_vfl: 1, loss_bbox: 5, loss_giou: 2, }
+  losses: [ 'vfl', 'boxes', ]
   alpha: 0.75
   gamma: 2.0
 
   matcher:
     type: HungarianMatcher
-    weight_dict: {cost_class: 2, cost_bbox: 5, cost_giou: 2}
+    weight_dict: { cost_class: 2, cost_bbox: 5, cost_giou: 2 }
     # use_focal_loss: True 
     alpha: 0.25
     gamma: 2.0
