--- a/rtdetr_pytorch/configs/rtdetr/rtdetr_r50vd_m_6x_coco.yml
+++ b/rtdetr_pytorch/configs/rtdetr/rtdetr_r50vd_m_6x_coco.yml
@@ -9,6 +9,7 @@ __include__: [
 output_dir: ./output/rtdetr_r50vd_m_6x_coco
 
 
+# 相比于rtdetr_r50vd_6x_coco.yml 多的参数
 HybridEncoder:
   expansion: 0.5
 
